2011-02-01  Michael Godfrey  <godfrey@isl.stanford.edu>

	* gl2ps-renderer.cc (glps_renderer::draw):
	Return immediately if fdopen fails.

2011-02-01  John W. Eaton  <jwe@octave.org>

	* gl-render.cc:	(opengl_renderer::setup_opengl_transformation,
	opengl_renderer::draw_axes_planes,
	opengl_renderer::draw_axes_boxes,
	opengl_renderer::draw_axes_x_grid,
	opengl_renderer::draw_axes_y_grid,
	opengl_renderer::draw_axes_z_grid,
	opengl_renderer::draw_axes_title,
	opengl_renderer::draw_axes_children):
	New private functions, extracted from opengl_renderer::draw_axes.
	(opengl_renderer::draw_axes): Call subfunctions to do most of
	the work.
	* gl-render.h: Provide decls.

2011-01-31  John W. Eaton  <jwe@octave.org>

	* sysdep.cc (get_P_tmpdir): New function.
	* file-io.cc (FP_tmpdir): Use it.
	Bug #32158.

2011-01-30  Rik  <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/__init_fltk__.cc (mouse_wheel_zoom, gui_mode): Rename
	functions and strip "fltk_" prefix.  Improve docstrings.

2011-01-30  John W. Eaton  <jwe@octave.org>

	* txt-eng-ft.cc (ft_manager::ft_manager): Omit fc_init_done from
	initialization list if fontconfig is missing.

2011-01-30  Pascal Dupuis  <Pascal.Dupuis@worldonline.be>

	* oct-parse.yy (class stdio_stream_reader): Disallow copying.

2011-01-30  John W. Eaton  <jwe@octave.org>

	* graphics.cc (gnuplot_toolkit::redraw): Call __gnuplot_drawnow__,
	not gnuplot_drawnow.
	(gnuplot_toolkit::print_figure): Likewise.

2011-01-30  John W. Eaton  <jwe@octave.org>

	* Makefile.am (OCTAVE_LIBS): Remove $(ARPACK_LDFLAGS) and
	$(ARPACK_LIBS) from the list.
	(DLD-FUNCTIONS/eigs.df): Don't add $(ARPACK_CPPFLAGS) to CPPFLAGS.
	(DLD_FUNCTIONS_eigs_la_CPPFLAGS): Remove $(ARPACK_CPPFLAGS) from
	the list.
	(DLD_FUNCTIONS_eigs_la_LIBADD): Remove $(ARPACK_LDFLAGS) and
	$(ARPACK_LIBS) from the list.

2011-01-30  John W. Eaton  <jwe@octave.org>

	* load-save.cc (Fload): Doc fix.

2011-01-29  Rik  <octave@nomad.inbox5.com>
